@@ -22,6 +22,8 @@ Comment=Qt5 Configuration Tool
 
 
 
+
+
 Exec=qt5ct
 Icon=preferences-desktop-theme
 Terminal=false
