@@ -279,3 +279,8 @@ Version 0.37
 * fixed icon theme parsing
 * replaced deprecated code
 * updated Russian translation
+* updated Chinese (Taiwan) translation (Jeff Huang)
+* updated Dutch (Netherlands) translation (Heimen Stoffels)
+* updated Greek translation (Dimitrios Glentadakis)
+* updated German translation (Ettore Atalan)
+* updated Danish translation (scootergrisen)
